[package]
name = "s3_learning_project"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["time"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
bytes = "0.6"
# Add these logging dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"  # For Actix Web integration
tracing-log = "0.1"  # For log compatibility
md-5 = "0.7"
hex = "0.4"
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "s3_learning_project"
path = "src/lib.rs"
